[Falgun Patel] UC3 - add slf4j for logging
Signed-off-by: Falgun Patel <falgunmpatel9123@gmail.com>